@@ -2,7 +2,7 @@
 #
 # SNMPTT v1.3beta1
 #
-# Copyright 2002-2007 Alex Burger
+# Copyright 2002-2009 Alex Burger
 # alex_b@users.sourceforge.net
 # 4/11/2002
 #
